RESOLVED FIXED232509
[LFC][IFC] InlineItem should not cross bidi level boundary
https://bugs.webkit.org/show_bug.cgi?id=232509
Summary [LFC][IFC] InlineItem should not cross bidi level boundary
alan
Reported 2021-10-29 15:04:10 PDT
let's add bidi level information
Attachments
Patch (13.57 KB, patch)
2021-10-29 15:09 PDT, alan
no flags
alan
Comment 1 2021-10-29 15:09:34 PDT
EWS
Comment 2 2021-10-30 06:44:46 PDT
Committed r285079 (243721@main): <https://commits.webkit.org/243721@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442869 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-30 06:45:20 PDT
Note You need to log in before you can comment on or make changes to this bug.