Source/WebCore/layout/formattingContexts/inline/InlineSoftLineBreakItem.h
@@ -34,21 +34,22 @@ namespace Layout {
 
 class InlineSoftLineBreakItem : public InlineItem {
 public:
-    static InlineSoftLineBreakItem createSoftLineBreakItem(const InlineTextBox&, unsigned position);
+    static InlineSoftLineBreakItem createSoftLineBreakItem(const InlineTextBox&, unsigned position, UBiDiLevel = UBIDI_DEFAULT_LTR);
 
     unsigned position() const { return m_startOrPosition; }
     const InlineTextBox& inlineTextBox() const { return downcast<InlineTextBox>(layoutBox()); }
 
-    InlineSoftLineBreakItem(const InlineTextBox&, unsigned position);
+private:
+    InlineSoftLineBreakItem(const InlineTextBox&, unsigned position, UBiDiLevel);
 };
 
-inline InlineSoftLineBreakItem InlineSoftLineBreakItem::createSoftLineBreakItem(const InlineTextBox& inlineTextBox, unsigned position)
+inline InlineSoftLineBreakItem InlineSoftLineBreakItem::createSoftLineBreakItem(const InlineTextBox& inlineTextBox, unsigned position, UBiDiLevel bidiLevel)
 {
-    return { inlineTextBox, position };
+    return { inlineTextBox, position, bidiLevel };
 }
 
-inline InlineSoftLineBreakItem::InlineSoftLineBreakItem(const InlineTextBox& inlineTextBox, unsigned position)
-    : InlineItem(inlineTextBox, Type::SoftLineBreak)
+inline InlineSoftLineBreakItem::InlineSoftLineBreakItem(const InlineTextBox& inlineTextBox, unsigned position, UBiDiLevel bidiLevel)
+    : InlineItem(inlineTextBox, Type::SoftLineBreak, bidiLevel)
 {
     m_startOrPosition = position;
 }
